Fixed some styling